# generative-art

./: Cargo.toml
src/: arguments.rs  lsystem.rs  main.rs  texture.rs  turtle.rs
src/app/: lsystem.rs  mandelbrot.rs  mod.rs
src/app/pieces/: mod.rs  square_spirals.rs  squares.rs
src/pieces/: koch.rs  mod.rs  noise.rs  square_spirals.rs  squares.rs
