[package]
name = "generative-art"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
nannou = "0.19.0"
noise = "0.9.0"   # nannou uses noise-0.7.0, which is missing the generic Fbm type
palette = "0.7.6" # nannou uses palette-0.5.0, which doesn't have FromStr for Rgb
